// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Block applies a bgColor modifier 1`] = `
.c0 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  background-color: #9E9E9E;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: NaNrem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
  background-color: #E91E63;
}

.c0:hover,
.c0:focus {
  background-color: #ababab;
  box-shadow: 0 8px 8px 0 rgba(117,117,117,0.4);
}

.c1 {
  font-size: 24px;
  padding-right: 0.5rem;
}

.c2 {
  color: #424242;
  font-size: 1.25rem;
  color: #FFFFFF;
}

.c3 {
  font-weight: 300;
  text-transform: uppercase;
}

.c4 {
  font-size: 1rem;
  margin: 0;
}

<button
  className="c0"
>
  <span
    aria-hidden={true}
    className="fa fa-home c1 c2"
    modifiers={
      Array [
        "left",
        "chrome000",
      ]
    }
  />
  <span
    className="c3 c4"
  >
    action
  </span>
</button>
`;

exports[`Button Block applies a hoverBgColor modifier 1`] = `
.c0 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  background-color: #9E9E9E;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: NaNrem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
}

.c0:hover,
.c0:focus {
  background-color: #ababab;
  box-shadow: 0 8px 8px 0 rgba(117,117,117,0.4);
}

.c0:hover,
.c0:focus {
  background-color: #5cb860;
}

.c1 {
  font-size: 24px;
  padding-right: 0.5rem;
}

.c2 {
  color: #424242;
  font-size: 1.25rem;
  color: #FFFFFF;
}

.c3 {
  font-weight: 300;
  text-transform: uppercase;
}

.c4 {
  font-size: 1rem;
  margin: 0;
}

<button
  className="c0"
>
  <span
    aria-hidden={true}
    className="fa fa-home c1 c2"
    modifiers={
      Array [
        "left",
        "chrome000",
      ]
    }
  />
  <span
    className="c3 c4"
  >
    action
  </span>
</button>
`;

exports[`Button Block applies the fullWidth modifier 1`] = `
.c0 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  background-color: #9E9E9E;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: NaNrem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0:hover,
.c0:focus {
  background-color: #ababab;
  box-shadow: 0 8px 8px 0 rgba(117,117,117,0.4);
}

.c1 {
  font-size: 24px;
  padding-right: 0.5rem;
}

.c2 {
  color: #424242;
  font-size: 1.25rem;
  color: #FFFFFF;
}

.c3 {
  font-weight: 300;
  text-transform: uppercase;
}

.c4 {
  font-size: 1rem;
  margin: 0;
}

<button
  className="c0"
>
  <span
    aria-hidden={true}
    className="fa fa-home c1 c2"
    modifiers={
      Array [
        "left",
        "chrome000",
      ]
    }
  />
  <span
    className="c3 c4"
  >
    action
  </span>
</button>
`;

exports[`Button Block renders correctly 1`] = `
.c0 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  background-color: #9E9E9E;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: NaNrem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
}

.c0:hover,
.c0:focus {
  background-color: #ababab;
  box-shadow: 0 8px 8px 0 rgba(117,117,117,0.4);
}

.c1 {
  font-size: 24px;
  padding-right: 0.5rem;
}

.c2 {
  color: #424242;
  font-size: 1.25rem;
  color: #FFFFFF;
}

.c3 {
  font-weight: 300;
  text-transform: uppercase;
}

.c4 {
  font-size: 1rem;
  margin: 0;
}

<button
  className="c0"
>
  <span
    aria-hidden={true}
    className="fa fa-home c1 c2"
    modifiers={
      Array [
        "left",
        "chrome000",
      ]
    }
  />
  <span
    className="c3 c4"
  >
    action
  </span>
</button>
`;
